# flutter-webrtc

./: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
.github/workflows/: build.yml  publish-libwebrtc-windows-arm64.yml
example/elinux/: .gitignore
example/macos/: .gitignore
ios/: flutter_webrtc.podspec
ios/flutter_webrtc/: Package.swift
lib/src/: helper.dart  media_devices.dart  media_recorder.dart  native_logs_listener.dart
lib/src/native/: adapter_type.dart  audio_management.dart  camera_utils.dart  data_packet_cryptor_impl.dart  desktop_capturer_impl.dart  event_channel.dart  factory_impl.dart  frame_cryptor_impl.dart  media_recorder_impl.dart  media_stream_impl.dart  media_stream_track_impl.dart  mediadevices_impl.dart  rtc_data_channel_impl.dart  rtc_dtmf_sender_impl.dart  rtc_peerconnection_impl.dart  rtc_rtp_receiver_impl.dart  rtc_rtp_sender_impl.dart  rtc_rtp_transceiver_impl.dart  rtc_track_event_impl.dart  rtc_video_platform_view.dart  rtc_video_platform_view_controller.dart  rtc_video_renderer_impl.dart  rtc_video_view_impl.dart  utils.dart
lib/src/native/android/: audio_configuration.dart
lib/src/native/ios/: audio_configuration.dart
lib/src/web/: rtc_video_renderer_impl.dart  rtc_video_view_impl.dart  utils.dart
macos/: flutter_webrtc.podspec
macos/flutter_webrtc/: Package.swift
test/unit/: rtc_peerconnection_test.dart
windows/: CMakeLists.txt
